sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:13: error: ')' expected but ',' found.
      if (plusPetit(getNombreValeurs()-1-i:Int),(getNombreValeurs()-1-i-1):Int){
                                               ^AlgCocktailSort1:13: error: illegal start of simple expression
      if (plusPetit(getNombreValeurs()-1-i:Int),(getNombreValeurs()-1-i-1):Int){
                                                                          ^