sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var c:Int=1
  while (c!=0) {
    c=0
    for (i <- 0 to getNombreValeurs()-2) {
      if (plusPetit(i:Int,(i+1):Int)){
        c=1
        echange(i:Int, (i+1):Int)
      }
    }
    for (i <- 0 to getNombreValeurs()-2) {
      if (plusPetit(getNombreValeurs()-1-i:Int),(getNombreValeurs()-1-i-1):Int){
        c=1
        echange(getValeur(getNombreValeurs()-1-i:):Int, (getNombreValeurs()-1-i-1):Int)
      }
    }
  }
}